# XIAOMI-MiModex

./: .gitignore  LICENSE  MiModex.command  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-tauri.mjs  doctor.sh  e2e-capabilities.mjs  ensure-sidecar.mjs  launch-direct-macos.sh  repair-macos-launchservices.sh  sign-macos-app.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/mimo-code/: package.json
src-tauri/src/: lib.rs  main.rs
src/components/AppLauncher/: AppLauncher.css  AppLauncher.tsx
src/components/Audio/: GeneratedAudioCard.css  GeneratedAudioCard.tsx
src/components/ChatArea/: ChatArea.css  ChatArea.tsx  MessageBubble.css  MessageBubble.tsx  ThinkingBlock.tsx  ToolCallBlock.tsx
src/components/Common/: IslandLoader.css  IslandLoader.tsx
src/components/InputBar/: CommandPalette.tsx  InputBar.css  InputBar.tsx
src/components/Layout/: StatusBar.css  StatusBar.tsx
src/components/LeftPanel/: CapabilityCenter.tsx  LeftPanel.css  LeftPanel.tsx  SessionManager.tsx
src/components/RightPanel/: AssetsPanel.tsx  ChangesPanel.tsx  ContextPanel.tsx  RightPanel.css  RightPanel.tsx  (+1 more)
src/constants/: mimoCapabilities.ts
src/services/: cli.ts  config.ts  diagnostics.ts  errorExplain.ts  mimoApi.ts
src/stores/: appStore.ts  sessionStore.ts  uiStore.ts
src/styles/: animations.css  global.css  variables.css  visual-system.css
src/types/: index.ts
(+6 files in other folders)
